// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-4:active .emotion-9[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-8 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-8:hover {
  background-color: #d9dadd;
}

.emotion-8:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-8:focus-within,
.emotion-8:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-8:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-8:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-8:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-8:has(:checked):focus-within,
.emotion-8:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-8[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-8[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-8[data-error="true"]:focus-within,
.emotion-8[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-8[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-8[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-10 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-10[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
            style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <legend
                class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <label
                aria-disabled="false"
                class="emotion-4 emotion-5"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                >
                  <div
                    class="emotion-6 emotion-7"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-8 emotion-9"
                  data-disabled="false"
                  data-error="false"
                >
                  <input
                    aria-invalid="false"
                    class="emotion-10 emotion-11"
                    id="«r1»"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="emotion-4 emotion-5"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                >
                  <div
                    class="emotion-6 emotion-7"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-8 emotion-9"
                  data-disabled="false"
                  data-error="false"
                >
                  <input
                    aria-invalid="false"
                    class="emotion-10 emotion-11"
                    id="«r4»"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-4:active .emotion-9[data-disabled='false']:after {
  width: calc(1rem * 1.3775);
}

.emotion-4[aria-disabled="true"] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6 {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-8 {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 1rem;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 3rem;
  height: 1.5rem;
}

.emotion-8:hover {
  background-color: #d9dadd;
}

.emotion-8:after {
  content: "";
  position: absolute;
  top: calc(1.5rem / 2 - 1rem / 2);
  left: 5px;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.emotion-8:focus-within,
.emotion-8:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8[data-disabled="false"]:active:after {
  width: calc(1rem * 1.3775);
}

.emotion-8:has(:checked) {
  color: #222638;
  background-color: #8c40ef;
}

.emotion-8:has(:checked):hover {
  background-color: #792dd4;
}

.emotion-8:has(:checked):after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-8:has(:checked):focus-within,
.emotion-8:has(:checked):focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-8[data-disabled="true"] {
  background: #f3f3f4;
}

.emotion-8[data-disabled="true"]:has(:checked) {
  background: #e5dbfd;
}

.emotion-8[data-error="true"] {
  background-color: #ffebf2;
}

.emotion-8[data-error="true"]:focus-within,
.emotion-8[data-error="true"]:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-8[data-error="true"]:has(:checked) {
  background-color: #e51963;
}

.emotion-8[data-error="true"][data-disabled="true"] {
  background-color: #fff3f7;
}

.emotion-8[data-error="true"][data-disabled="true"]:has(:checked) {
  background-color: #ffd3e3;
}

.emotion-10 {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.emotion-10[disabled] {
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
            style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <div
                class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
              >
                <legend
                  class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
              style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
            >
              <label
                aria-disabled="false"
                class="emotion-4 emotion-5"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                >
                  <div
                    class="emotion-6 emotion-7"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-8 emotion-9"
                  data-disabled="false"
                  data-error="true"
                >
                  <input
                    aria-invalid="true"
                    class="emotion-10 emotion-11"
                    id="«r9»"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="emotion-4 emotion-5"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                  style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                >
                  <div
                    class="emotion-6 emotion-7"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="emotion-8 emotion-9"
                  data-disabled="false"
                  data-error="true"
                >
                  <input
                    aria-invalid="true"
                    class="emotion-10 emotion-11"
                    id="«rc»"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <p
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owl uv_m4c9own uv_m4c9ow1b uv_m4c9ow1n uv_m4c9ow3f"
        >
          This field is required
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
